--- a/traceroot-macros/Cargo.toml
+++ b/traceroot-macros/Cargo.toml
@@ -2,12 +2,14 @@
 name = "traceroot-macros"
 version = "0.1.0"
 edition = "2021"
+description = "Procedural macros for traceroot"
+license = "MIT"
+repository = "https://github.com/traceroot-ai/traceroot-sdk-rs"
 
 [lib]
 proc-macro = true
 
 [dependencies]
-proc-macro2 = "1"
-quote = "1"
-syn = { version = "2", features = ["full"] }
-tracing = "0.1"
+quote = "1.0"
+syn = { version = "1.0", features = ["full"] }
+proc-macro2 = "1.0"
