--- a/traceroot-macros/Cargo.toml
+++ b/traceroot-macros/Cargo.toml
@@ -11,5 +11,9 @@ proc-macro = true
 
 [dependencies]
 quote = "1.0"
-syn = { version = "1.0", features = ["full"] }
+syn = { version = "1.0.109", features = ["full"] }
 proc-macro2 = "1.0"
+
+[patch.crates-io]
+syn = { version = "1.0.109", features = ["full"] }
+
