--- a/traceroot-macros/Cargo.toml
+++ b/traceroot-macros/Cargo.toml
@@ -1,10 +1,7 @@
 [package]
-name = "traceroot-macros"
+name = "traceroot-macros"   # ✅ must match in both places
 version = "0.1.0"
 edition = "2021"
-description = "Procedural macros for traceroot"
-license = "MIT"
-repository = "https://github.com/traceroot-ai/traceroot-sdk-rs"
 
 [lib]
 proc-macro = true
@@ -13,7 +10,3 @@ proc-macro = true
 quote = "1.0"
 syn = { version = "1.0.109", features = ["full"] }
 proc-macro2 = "1.0"
-
-[patch.crates-io]
-syn = { version = "1.0.109", features = ["full"] }
-
